cor dourada nos nomes

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     
                 </div>
                 <div class="col-6 p-5" id="divTexto">
-                    <div>
+                    <div class="cor-golden">
                         <h1 class="font-romantic">Lior Santi</h1>
                         <h1 class="font-romantic">& Rissa Brivk</h1>
                     </div>
@@ -89,7 +89,7 @@
                     
                 </div>
                 <div class="col-12" id="divTextoPhone">
-                    <div>
+                    <div class="cor-golden">
                         <h1 class="font-romantic-phone">Lior Santi</h1>
                         <h1 class="font-romantic-phone">& Rissa Brivk</h1>
                     </div>
