--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 
     <link rel="stylesheet" href="style.css">
 
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='80%' x='50%' font-size='90' text-anchor='middle'>🌻</text></svg>">
+
 </head>
 
 <body>
