--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Me and you | Lior & Rissa</title>
+    <title>🦇🌻 Me and you | Lior & Rissa </title>
 
     <!-- bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -15,7 +15,7 @@
 
     <link rel="stylesheet" href="style.css">
 
-    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='80%' x='50%' font-size='90' text-anchor='middle'>🌻</text></svg>">
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='80%' x='50%' font-size='90' text-anchor='middle'>❤️</text></svg>">
 
 </head>
 
@@ -35,7 +35,7 @@
                     </div>
                     <hr class="border-2">
                     <div class="bloco-rolavel" style="border: 0;">
-                        <p><u>Eles se conheceram cedo demais para entender o que sentiam.</u></p>
+                        <p>Eles se conheceram cedo demais para entender o que sentiam.</p>
 
                         <p>Na antiga academia de Piltover, Lior e Rissa dividiam a mesma sala. Sentavam-se a poucas
                             fileiras de distância, trocavam olhares rápidos, sorrisos contidos, silêncios que diziam
